--- a/jqtrain/index.html
+++ b/jqtrain/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>编辑地址</title>
+    <title>获取新闻</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <script src="https://cdn.bootcss.com/jquery/3.2.0/jquery.js"></script>
     <style>
